# FlowerHackathon

./: README.md
aicontroller/: README.md  pyproject.toml
aicontroller/aicontroller/: __init__.py  agent_runner.py  client_app.py  llm_agent_cli.py  server_app.py  task.py  tracking_strategy.py
