# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aicontroller"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.22.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "Pillow>=10.0.0",      # for PIL image loading in SOCOFing
    "pydantic>=1.10,<2.0",   # Python 3.9 friendly
    "PyYAML>=6.0",           # if you use the agent/run-cards
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "thilakshriyan"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "aicontroller.server_app:app"
clientapp = "aicontroller.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 3
fraction-train = 0.5
local-epochs = 1
lr = 0.01

data-root        = "/Users/spartan/Projects/FlowerHackathon/data"   
label-mode       = "binary"  
num-partitions   = 5                         # must match/suit your simulation

# Default federation to use when running the app
[tool.flwr.federations]
default = "remote-federation"


# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "localhost:9093"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
