[project]
name = "aicontroller"
version = "1.0.3"
description = "Flower FedLearn + SOCOFing + Mongo tracking + Agent"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.22.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "Pillow>=10.0.0",
    "pydantic>=1.10,<2.0",
    "PyYAML>=6.0",
    "pymongo>=4.6",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",      
    "openai>=1.37.0",
    "pymongo>=4.6",
    "typer[all]>=0.12",
    "rich>=13.7"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "thilakshriyan"

[tool.flwr.app.components]
serverapp = "aicontroller.server_app:app"
clientapp = "aicontroller.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-train    = 0.5
local-epochs      = 1
lr                = 0.01
data-root        = "/Users/spartan/Projects/FlowerHackathon/data"  
label-mode        = "binary"
num-partitions    = 5
strategy          = "FedAvg"

[tool.flwr.federations]
default = "remote-federation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 2

[tool.flwr.federations.remote-federation]
address  = "localhost:9093"
insecure = true

